apps/services/seatable/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: seatable
  labels:
    name: seatable
