apps/services/seatable/service-seatable.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seatable
  namespace: seatable
spec:
  selector:
    app: seatable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
