apps/services/seatable/ingressroute-seatable.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seatable
  namespace: seatable
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seatable.xrs444.net`)
      kind: Rule
      services:
        - name: seatable
          port: 80
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
